Fix zoom on mobile devices, add skill tags to experience

--- a/style/main.css
+++ b/style/main.css
@@ -21,25 +21,30 @@ body {
     width: 100%;
     height: 100%;
     margin: 0px 0px;
+    vertical-align: middle;
 }
 
 .main-content {
     background-color: var(--main-bg);
-    margin: 10px auto;
-    padding-left: 10px;
-    padding-right: 10px;
+    align-self: center;
+    box-sizing: border-box;
+    padding: 10px;
+    margin: auto auto;
+    padding-top: 30px;
     width: 60%;
 }
 
 @media screen and (max-width: 1000px) {
     .main-content {
         width: 80%;
+        padding-top: 20px;
     }
 }
 
 @media screen and (max-width: 700px) {
     .main-content {
         width: 100%;
+        padding: 20px;
     }
 }
 
@@ -328,12 +333,6 @@ li {
 .cv-item h3,
 p {
     margin: 8px auto;
-}
-
-@media screen and (min-width: 700px) {
-    .adaptive-footer {
-        display: none;
-    }
 }
 
 
